--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,13 +28,13 @@ body {
   max-width: 300px;
   width: 100%;
   min-width: 250px;
-  min-height: 250px;
   background-color: #fff9f9;
   border-radius: 30px;
   box-shadow: 0 0 10px grey;
   overflow: hidden;
   text-align: center;
   margin: 10px;
+  height: 100%;
 }
 
 .container-user-info {
@@ -64,16 +64,22 @@ body {
   margin-bottom: 1.3rem;
 }
 
+.p-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 .about-user {
   font-family: "Roboto", serif;
   font-weight: 400;
   margin-bottom: 1.5rem;
-  padding: 5px;
+  padding: 0 5px;
 }
 
 .user-contact {
   font-weight: 700;
   color: var(--color-braun);
+  margin-top: auto;
 }
 
 .icons-media-container {
