--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,10 +15,9 @@ body {
   display: flex;
   flex-wrap: wrap;
   background-color: #e6edef;
-  font-family: "Inter", serif;
-  height: 100vh;
+  font-family: "Inter", sans-serif;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
 }
 
 .user-card {
@@ -34,13 +33,9 @@ body {
   overflow: hidden;
   text-align: center;
   margin: 10px;
-  height: 100%;
 }
 
-.container-user-info {
-  display: flex;
-  flex-direction: column;
-}
+
 
 .user-foto {
   width: 10rem;
@@ -48,7 +43,7 @@ body {
   object-fit: cover;
   object-position: left top;
   border-radius: 50%;
-  margin: 2em 5em;
+  margin: 2em auto;
 }
 
 .user-name {
@@ -64,13 +59,8 @@ body {
   margin-bottom: 1.3rem;
 }
 
-.p-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
 .about-user {
-  font-family: "Roboto", serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   margin-bottom: 1.5rem;
   padding: 0 5px;
@@ -92,6 +82,7 @@ body {
   border: 2px solid black;
   padding: 5px;
   border-radius: 50%;
+  padding: 5px 7px;
 }
 
 .icons-media + .icons-media {
@@ -115,7 +106,7 @@ body {
 .button {
   text-decoration: none;
   color: white;
-  font-family: "Roboto", serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 200;
   line-height: 28px;
   font-size: 0.7rem;
